add bg in login

--- a/index.html
+++ b/index.html
@@ -11,124 +11,229 @@
   <body style="background-color: #a8ceff">
     <div class="container-fluid">
       <div class="row">
-          <div class="col-12 title_Bar"><a href="index.html">Ideal Stock</a></div>
-          <div class="col-11 Tool_Bar"><input type="button" name="Login" Value="Login"></div>
+        <div class="col-12 title_Bar"><a href="index.html">Ideal Stock</a></div>
+        <div class="col-11 Tool_Bar">
+          <input type="button" name="Login" value="Login" />
         </div>
+      </div>
       <div class="row mt-4">
         <div class="col-10 offset-1 Menu_base mt-2">
           <h2>Destaque</h2>
-            <div class="Display"> 
-                <a href="Produto.html"><img src="Image/mene.png" class="Responsive_image"></a>
-                  <h3 class="font_Medium">One Hot Minute</h3>
-                  <h4 class="font_Little">00.00 R$</h4>
+          <div class="Display">
+            <a href="Produto.html"
+              ><img src="Image/mene.png" class="Responsive_image"
+            /></a>
+            <h3 class="font_Medium">One Hot Minute</h3>
+            <h4 class="font_Little">00.00 R$</h4>
+          </div>
+          <div class="Itens_Base">
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene1.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
             </div>
-            <div class="Itens_Base">
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene1.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene1.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene1.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene1.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene1.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene1.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene1.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-             <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene1.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene1.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene1.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene1.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
             </div>
-        </div>
-      </div>  
-      <div class="row mt-5 ">
-        <div class="col-10 offset-1 Menu_base mt-5">
-          <h2>Pesquisa</h2>
-          <input type="text" name="Search" class="Search_Input"><input type="button" name="SearchButton" value="🔎" class="Search_Button">  
-            <div class="Itens_Base_Search">
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
-              <div class="Item_Pic"> 
-               <a href="Produto.html"><img src="Image/mene2.png"  class="Responsive_pic"></a>
-                <a href="Produto.html"><h2 class="Text"><span>One Hot Minute</span></h2></a>
-              </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene1.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene1.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene1.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene1.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene1.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene1.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene1.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene1.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene1.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene1.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+          </div>
         </div>
       </div>
+      <div class="row mt-5">
+        <div class="col-10 offset-1 Menu_base mt-5">
+          <h2>Pesquisa</h2>
+          <input type="text" name="Search" class="Search_Input" /><input
+            type="button"
+            name="SearchButton"
+            value="🔎"
+            class="Search_Button"
+          />
+          <div class="Itens_Base_Search">
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+            <div class="Item_Pic">
+              <a href="Produto.html"
+                ><img src="Image/mene2.png" class="Responsive_pic"
+              /></a>
+              <a href="Produto.html"
+                ><h2 class="Text"><span>One Hot Minute</span></h2></a
+              >
+            </div>
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col-12 Footer">Propriety of Jf Enterprizes</div>
