--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
       <div class="row justify-content-center">
         <div class="col-12 col-sm-6 col-md-3">
           <div class="Itens_base">
-            <img src="./Image/logo.p" class="img" />
+            <img src="./Image/logo.png" class="img" />
             <form action="login.html" method="POST" class="form">
               <div class="form-group">
                 <div class="Item_Pic">
