--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                     class="form-control"
                     id="email"
                     aria-describedby="emailHelp"
-                    placeholder="Enter with email"
+                    placeholder="Enter with your login"
                   />
                 </div>
               </div>
@@ -48,7 +48,7 @@
                     type="password"
                     class="form-control"
                     id="password"
-                    placeholder="Enter with password"
+                    placeholder="Enter with your password"
                   />
                 </div>
               </div>
