--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
               </div>
               <div class="row">
                 <div class="col-8 offset-3">
-                  <a href="#" class="create">Create Account</a>
+                  <a href="./account.html" class="create">Create Account</a>
                   <i class="fas fa-angle-double-right icon-modify"></i>
                 </div>
               </div>
