--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
   </head>
   <body style="background-color: #ecf0f1">
     <div class="container-fluid">
-      <div class="row justify-content-ceter">
+      <div class="row justify-content-center">
         <div class="col-12 col-sm-6 col-md-3">
           <div class="Itens_base">
             <img src="./Image/logo.png" class="img" />
