atualizando as cores

--- a/account.html
+++ b/account.html
@@ -94,7 +94,7 @@
                     type="number"
                     class="form-control"
                     id="tel"
-                    placehder="Enter with your telefone"
+                    placeholder="Enter with your telefone"
                   />
                 </div>
               </div>
